Segundo commit com correção no envio de e-mail.

--- a/compra_venda_acoes_rest/src/main/resources/application.properties
+++ b/compra_venda_acoes_rest/src/main/resources/application.properties
@@ -22,3 +22,18 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.default_schema=public
 
 spring.datasource.initialization-mode=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=claudiotheles@gmail.com
+spring.mail.password=U+qX_)(8
+#spring.mail.password=Smnh4B()l
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
