--- a/compra_venda_acoes_rest/src/main/resources/application.properties
+++ b/compra_venda_acoes_rest/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.initialization-mode=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=claudiotheles@gmail.com
-spring.mail.password=U+qX_)(8
+spring.mail.password=
 #spring.mail.password=Smnh4B()l
 
 # Other properties
